added new lines

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button id="uber">Request Now</button>
-    <button id="amazon">Request Now</button>
-    <button id="sign-up">Sign up</button>
+    <!-- <button id="uber">Request Now</button>
+    <button id="amazon">Order Now</button>
+    <button id="sign-up">Sign up</button> -->
+    <!-- <button id="one">Strech</button> -->
+    <!-- <button id="two">Shadow</button> -->
+    <p id="shop">
+      Shopping is an essential aspect of life as it allows individuals.
+      <span>Shop now ></span>
+    </p>
   </body>
 </html>
